@@ -25,8 +25,7 @@ namespace Castle.MicroKernel.Handlers
 	using Castle.MicroKernel.Resolvers;
 
 	/// <summary>
-	///   Implements the basis of
-	///   <see cref="IHandler" />
+	/// Implements the basis of <see cref = "IHandler" />
 	/// </summary>
 	[Serializable]
 	public abstract class AbstractHandler :
@@ -42,8 +41,7 @@ namespace Castle.MicroKernel.Handlers
 		private IKernelInternal kernel;
 
 		/// <summary>
-		///   Dictionary of key (string) to
-		///   <see cref="DependencyModel" />
+		/// Dictionary of key (string) to <see cref = "DependencyModel" />
 		/// </summary>
 		[DebuggerBrowsable(DebuggerBrowsableState.Never)]
 		private HashSet<DependencyModel> missingDependencies;
@@ -52,16 +50,16 @@ namespace Castle.MicroKernel.Handlers
 		private HandlerState state = HandlerState.Valid;
 
 		/// <summary>
-		///   Constructs and initializes the handler
+		/// Constructs and initializes the handler
 		/// </summary>
-		/// <param name="model"> </param>
+		/// <param name = "model"> </param>
 		protected AbstractHandler(ComponentModel model)
 		{
 			this.model = model;
 		}
 
 		/// <summary>
-		///   Gets the component model.
+		/// Gets the component model.
 		/// </summary>
 		[DebuggerBrowsable(DebuggerBrowsableState.RootHidden)]
 		public ComponentModel ComponentModel
@@ -70,7 +68,7 @@ namespace Castle.MicroKernel.Handlers
 		}
 
 		/// <summary>
-		///   Gets the handler state.
+		/// Gets the handler state.
 		/// </summary>
 		public HandlerState CurrentState
 		{
@@ -96,19 +94,17 @@ namespace Castle.MicroKernel.Handlers
 		}
 
 		/// <summary>
-		///   Should be implemented by derived classes: 
-		///   disposes the component instance (or recycle it)
+		/// Should be implemented by derived classes: disposes the component instance (or recycle it)
 		/// </summary>
-		/// <param name="burden"> </param>
+		/// <param name = "burden"> </param>
 		/// <returns> true if destroyed. </returns>
 		public abstract bool ReleaseCore(Burden burden);
 
 		/// <summary>
-		///   Returns an instance of the component this handler
-		///   is responsible for
+		/// Returns an instance of the component this handler is responsible for
 		/// </summary>
-		/// <param name="context"> </param>
-		/// <param name="instanceRequired"> when <c>false</c> , handler can not create valid instance and return <c>null</c> instead </param>
+		/// <param name = "context"> </param>
+		/// <param name = "instanceRequired"> when <c>false</c> , handler can not create valid instance and return <c>null</c> instead </param>
 		/// <returns> </returns>
 		protected abstract object Resolve(CreationContext context, bool instanceRequired);
 
@@ -141,13 +137,9 @@ namespace Castle.MicroKernel.Handlers
 		}
 
 		/// <summary>
-		///   Saves the kernel instance, subscribes to
-		///   <see cref="IKernelEvents.AddedAsChildKernel" />
-		///   event,
-		///   creates the lifestyle manager instance and computes
-		///   the handler state.
+		/// Saves the kernel instance, subscribes to <see cref = "IKernelEvents.AddedAsChildKernel" /> event, creates the lifestyle manager instance and computes the handler state.
 		/// </summary>
-		/// <param name="kernel"> </param>
+		/// <param name = "kernel"> </param>
 		public virtual void Init(IKernelInternal kernel)
 		{
 			if (kernel == null)
@@ -180,9 +172,9 @@ namespace Castle.MicroKernel.Handlers
 		}
 
 		/// <summary>
-		///   disposes the component instance (or recycle it).
+		/// disposes the component instance (or recycle it).
 		/// </summary>
-		/// <param name="burden"> </param>
+		/// <param name = "burden"> </param>
 		/// <returns> </returns>
 		public virtual bool Release(Burden burden)
 		{
@@ -190,10 +182,9 @@ namespace Castle.MicroKernel.Handlers
 		}
 
 		/// <summary>
-		///   Returns an instance of the component this handler
-		///   is responsible for
+		/// Returns an instance of the component this handler is responsible for
 		/// </summary>
-		/// <param name="context"> </param>
+		/// <param name = "context"> </param>
 		/// <returns> </returns>
 		public object Resolve(CreationContext context)
 		{
@@ -216,25 +207,24 @@ namespace Castle.MicroKernel.Handlers
 			{
 				return Resolve(context, false);
 			}
-			catch (DependencyResolverException)
+			catch (DependencyResolverException e)
 			{
 				// this exception is thrown when a dependency can not be resolved
 				// in which case we're free to ignore it and fallback
-				// TODO: this should be logged
+				Kernel.Logger.Warn(string.Format("Tried to resolve component {0} but failed due to exception. Ignoring.", ComponentModel.Name), e);
 				return null;
 			}
-			catch (HandlerException)
+			catch (HandlerException e)
 			{
 				// this exception is thrown when Handler can't operate or in the same
 				// cases as above, which means we should throw DependencyResolverException
 				// instead (in vNext, not to break anyone now)
-				// TODO: this should be logged
+				Kernel.Logger.Warn(string.Format("Tried to resolve component {0} but failed due to exception. Ignoring.", ComponentModel.Name), e);
 				return null;
 			}
 		}
 
-		public virtual bool CanResolve(CreationContext context, ISubDependencyResolver contextHandlerResolver, ComponentModel model,
-		                               DependencyModel dependency)
+		public virtual bool CanResolve(CreationContext context, ISubDependencyResolver contextHandlerResolver, ComponentModel model, DependencyModel dependency)
 		{
 			if (this.model.HasCustomDependencies == false)
 			{
@@ -256,17 +246,12 @@ namespace Castle.MicroKernel.Handlers
 		}
 
 		/// <summary>
-		///   Invoked by
-		///   <see cref="InitDependencies" />
-		///   in order to check if a dependency can be satisfied.
-		///   If not, the handler is set to a 'waiting dependency' state.
+		/// Invoked by <see cref = "InitDependencies" /> in order to check if a dependency can be satisfied. If not, the handler is set to a 'waiting dependency' state.
 		/// </summary>
 		/// <remarks>
-		///   This method registers the dependencies within the correct collection 
-		///   or dictionary and changes the handler state to
-		///   <see cref="HandlerState.WaitingDependency" />
+		/// This method registers the dependencies within the correct collection or dictionary and changes the handler state to <see cref = "HandlerState.WaitingDependency" />
 		/// </remarks>
-		/// <param name="dependency"> </param>
+		/// <param name = "dependency"> </param>
 		protected void AddDependency(DependencyModel dependency)
 		{
 			dependency.Init(model.ParametersInternal);
@@ -328,15 +313,12 @@ namespace Castle.MicroKernel.Handlers
 		}
 
 		/// <summary>
-		///   Invoked by the kernel
-		///   when one of registered dependencies were satisfied by 
-		///   new components registered.
+		/// Invoked by the kernel when one of registered dependencies were satisfied by new components registered.
 		/// </summary>
 		/// <remarks>
-		///   Handler for the event
-		///   <see cref="IKernelEvents.HandlerRegistered" />
+		/// Handler for the event <see cref = "IKernelEvents.HandlerRegistered" />
 		/// </remarks>
-		/// <param name="stateChanged"> </param>
+		/// <param name = "stateChanged"> </param>
 		protected void DependencySatisfied(ref bool stateChanged)
 		{
 			// Check within the Kernel
@@ -361,12 +343,10 @@ namespace Castle.MicroKernel.Handlers
 		}
 
 		/// <summary>
-		///   Checks if the handler is able to, at very least, satisfy
-		///   the dependencies for the constructor with less parameters
+		/// Checks if the handler is able to, at very least, satisfy the dependencies for the constructor with less parameters
 		/// </summary>
 		/// <remarks>
-		///   For each non*optional dependency, the implementation will invoke
-		///   <see cref="AddDependency" />
+		/// For each non*optional dependency, the implementation will invoke <see cref = "AddDependency" />
 		/// </remarks>
 		protected virtual void EnsureDependenciesCanBeSatisfied(IDependencyAwareActivator activator)
 		{
@@ -382,14 +362,13 @@ namespace Castle.MicroKernel.Handlers
 		}
 
 		/// <summary>
-		///   Invoked when the container receives a parent container reference.
+		/// Invoked when the container receives a parent container reference.
 		/// </summary>
 		/// <remarks>
-		///   This method implementation checks whether the parent container
-		///   is able to supply the dependencies for this handler.
+		/// This method implementation checks whether the parent container is able to supply the dependencies for this handler.
 		/// </remarks>
-		/// <param name="sender"> </param>
-		/// <param name="e"> </param>
+		/// <param name = "sender"> </param>
+		/// <param name = "e"> </param>
 		protected void OnAddedAsChildKernel(object sender, EventArgs e)
 		{
 			var stateChanged = false;
